2nd-wave/opensearch/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch-dashboard
  labels:
    app: opensearch
spec:
  ports:
    - port: 5601
      targetPort: 5601
